# LeastSquares_Matching

./: .gitignore  CMakeLists.txt  README.md  main.py  requirements.txt
core/include/: Correlation.h  Extract.h  matching.h  tools.h
core/src/: Correlation.cpp  Extract.cpp  matching.cpp  test.cpp  tools.cpp
python/: CMakeLists.txt  ImageLabel.py  app.py  bindings.cpp  setup.py  ui.py
python/app/: ImageLabel.py  app.py  ui.py
python/package/: __init__.py
